--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,10 @@ main {
     margin-bottom: 2rem;
 } 
 
+.wildlife-desc p {
+    margin-bottom: 1rem;
+}
+
 .main {
     display: flex;
     flex-direction: column;
