--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ main {
 }
 
 .main {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -87,6 +88,7 @@ main {
 }
 
 .inner-main {
+    width: 100%;
     display: flex;
     flex-direction: column;
     padding: .4rem;
@@ -129,6 +131,6 @@ footer {
     }
 
     img {
-        width: 30rem;
+        width: 90%;
     }
 }
