--- a/css/team.css
+++ b/css/team.css
@@ -1,3 +1,7 @@
+main {
+    width: 100%;
+}
+
 .team-members {
     display: flex;
     flex-direction: column;
@@ -23,13 +27,16 @@
 }
 
 .member img {
-    width: 90%;
+    width: 80%;
 }
 
 @media (min-width: 678px) {
     .team-members {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        column-gap: 7rem;
+    }
+
+    .member img {
+        width: 60%;
     }
 }
