--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ nav {
     width: 100%;
     background-color: #333;
     overflow: hidden;
+    display: flex;
 }
   
 nav ul {
@@ -56,7 +57,26 @@ nav li a {
 nav li a:hover {
     background-color: #111;
 }
+
+.nav-item {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    margin-left: auto;
+}
   
+.nav-link {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.nav-link:hover {
+    background-color: #111;
+}
 
 main {
     width: 90%;
