[chore]: Update youtube embed

--- a/css/media.css
+++ b/css/media.css
@@ -27,6 +27,7 @@ main section {
 .acacia-content .body p {
     font-size: 1.5rem;
     margin-bottom: 1rem;
+    width: 70%;
 }
 
 .acacia-content .body h2 {
