--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 
 header {
     width: 90%;
-    font-size: 2rem;
+    font-size: 1.2rem;
     padding-top: 0.8rem;
 }
 
@@ -145,6 +145,9 @@ footer {
 
 @media (min-width: 678px) {
     /* CSS rules go here */
+    header {
+        font-size: 2rem;
+    }
     .main {
         display: flex;
         flex-direction: row;
